# 1105_workshop

./: 1105_workshop.yaml
src/custom_flight/: CMakeLists.txt  package.xml
src/custom_flight/include/: mode.hpp
src/custom_flight/launch/: command.launch.py
src/custom_flight/src/: main.cpp
src/custom_line_flight/: CMakeLists.txt  package.xml
src/custom_line_flight/include/: mode.hpp
src/custom_line_flight/src/: main.cpp
src/custom_square_flight/: CMakeLists.txt  package.xml
src/custom_square_flight/include/: mode.hpp
src/custom_square_flight/src/: main.cpp
src/multi_vehicle_coordinator/: CMakeLists.txt  package.xml
src/multi_vehicle_coordinator/include/: coordinator.hpp
src/multi_vehicle_coordinator/launch/: multi_vehicle.launch.py
src/multi_vehicle_coordinator/src/: coordinator_node.cpp
